--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ python:
 install:
   - pip install -r requirements.txt
 script:
-  - pytest --cov-report term --cov=Cortex
+  - pytest --cov-report term --cov=cortex
 after_success:
   - codecov
