--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ pyflakes==2.1.1
 Pygments==2.5.2
 pyparsing==2.4.2
 pytest==5.2.2
+pytest-cov==2.8.1
 python-dateutil==2.8.1
 pytz==2019.3
 requests==2.22.0
