--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ Babel==2.7.0
 certifi==2019.9.11
 chardet==3.0.4
 Click==7.0
+codecov==2.0.15
+coverage==4.5.4
 cycler==0.10.0
 docutils==0.15.2
 entrypoints==0.3
