--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ pytest==5.2.2
 pytest-cov==2.8.1
 python-dateutil==2.8.1
 pytz==2019.3
+pyymal==5.3.1
 requests==2.22.0
 six==1.12.0
 snowballstemmer==2.0.0
