--- a/cortex/logger/logging_config.yaml
+++ b/cortex/logger/logging_config.yaml
@@ -3,10 +3,10 @@ disable_existing_loggers: False
 
 formatters:
   simple:
-    format: "%(asctime)s - %(name)s - %(levelname)s - %(message)s --- %(message)s (%(filename)s:%(lineno)s)"
+    format: "%(asctime)s - %(name)s - %(module)s - %(levelname)s - %(message)s --- %(message)s (%(filename)s:%(lineno)s)"
   console_colored:
     class: colorlog.ColoredFormatter
-    format: "%(log_color)s[%(asctime)s] [%(levelname)-8s] --- %(message)s (%(filename)s:%(lineno)s)"
+    format: "%(log_color)s[%(asctime)s] [%(levelname)-8s] --- %(message)s (%(module)s:%(filename)s:%(lineno)s)"
     datefmt: "%Y-%m-%d %H:%M:%S"
     
 handlers:
